[project]
name = "model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed-malik", email = "159722798+ahmed22138@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "openai-agents[viz]>=0.2.9",
]

[project.scripts]
model = "model:main"
m1 = "model.main:start"
come = "model.handoffs:start"
out = "model.cloneagent:start"
in = "model.debuglogging:start"
hell = "model.guardrials:start"
told  = "model.outputtype:start"
hi  = "model.streamed:start"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
